--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <audio id="bg-music" src="sonidos y fotos/coqueta.mp3" loop></audio>
+  <audio id="bg-music" src="sonidos%20y%20fotos/coqueta.mp3" loop></audio>
   <div class="rain"></div>
   <div class="container">
     <h1>Feliz Aniversario</h1>
